# server_monitoring_api

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/Jobs/: clear_database.rs  mod.rs
src/database/sqlite/: connection.rs  create_database.rs  flush.rs  mod.rs  query.rs  urls.rs
src/jobs/: make_request.rs
src/server/: http.rs  mod.rs  request.rs
src/services/os/: cpu.rs  memory.rs  mod.rs  uptime.rs
