[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.3.1"
sysinfo = "0.36.1"
reqwest = { version = "0.12", features = ["json"] }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
dotenv = "0.15.0"
rusqlite = { version = "0.31", features = ["bundled"] }